# esp32_aws_iot_blink

./: .clang-format  .gitignore  CMakeLists.txt  README.md  esp32_aws_iot_blink.ino
.devcontainer/: Dockerfile  arduino-cli.yaml  devcontainer.json  docker-compose.yml
src/aws_iot/: aws_iot_client.h  aws_iot_settings.h  aws_iot_topic.h
src/impl/: aws_iot_client_impl.cpp  aws_iot_client_impl.h  aws_iot_subscriber_impl.cpp  aws_iot_subscriber_impl.h  json_parser_impl.cpp  json_parser_impl.h  uart_client_impl.cpp  uart_client_impl.h  wifi_client_impl.cpp  wifi_client_impl.h
src/json/: json_parser.h
src/standard/: standard.h
src/uart/: input_setting.cpp  input_setting.h  uart_client.h
src/wifi/: wifi_client.h
test/aws_iot/: aws_iot_client_mock.h
test/json/: json_parser_mock.h
test/uart/: input_setting_test.cpp  uart_client_mock.h
test/wifi/: wifi_client_mock.h
